xpath/grammars/expr/y.output

state 0
	$accept: .top $end 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	top  goto 1
	Expr  goto 2
	OrExpr  goto 3
	AndExpr  goto 4
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  Expr.    (1)

	.  reduce 1 (src line 61)


state 3
	Expr:  OrExpr.    (2)
	OrExpr:  OrExpr.OR AndExpr 

	OR  shift 47
	.  reduce 2 (src line 68)


state 4
	OrExpr:  AndExpr.    (3)
	AndExpr:  AndExpr.AND EqualityExpr 

	AND  shift 48
	.  reduce 3 (src line 71)


state 5
	AndExpr:  EqualityExpr.    (5)
	EqualityExpr:  EqualityExpr.EQ RelationalExpr 
	EqualityExpr:  EqualityExpr.NE RelationalExpr 

	NE  shift 50
	EQ  shift 49
	.  reduce 5 (src line 79)


state 6
	EqualityExpr:  RelationalExpr.    (7)
	RelationalExpr:  RelationalExpr.LT AdditiveExpr 
	RelationalExpr:  RelationalExpr.GT AdditiveExpr 
	RelationalExpr:  RelationalExpr.LE AdditiveExpr 
	RelationalExpr:  RelationalExpr.GE AdditiveExpr 

	GT  shift 52
	GE  shift 54
	LT  shift 51
	LE  shift 53
	.  reduce 7 (src line 87)


state 7
	RelationalExpr:  AdditiveExpr.    (10)
	AdditiveExpr:  AdditiveExpr.'+' MultiplicativeExpr 
	AdditiveExpr:  AdditiveExpr.'-' MultiplicativeExpr 

	'+'  shift 55
	'-'  shift 56
	.  reduce 10 (src line 100)


state 8
	AdditiveExpr:  MultiplicativeExpr.    (15)
	MultiplicativeExpr:  MultiplicativeExpr.'*' UnaryExpr 
	MultiplicativeExpr:  MultiplicativeExpr.DIV UnaryExpr 
	MultiplicativeExpr:  MultiplicativeExpr.MOD UnaryExpr 

	'*'  shift 57
	DIV  shift 58
	MOD  shift 59
	.  reduce 15 (src line 123)


state 9
	MultiplicativeExpr:  UnaryExpr.    (18)

	.  reduce 18 (src line 136)


state 10
	UnaryExpr:  UnionExpr.    (22)
	UnionExpr:  UnionExpr.'|' PathExpr 

	'|'  shift 60
	.  reduce 22 (src line 154)


state 11
	UnaryExpr:  '-'.UnaryExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	UnaryExpr  goto 61
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 12
	UnionExpr:  PathExpr.    (24)

	.  reduce 24 (src line 162)


state 13
	PathExpr:  LocationPath.    (26)

	.  reduce 26 (src line 170)


state 14
	PathExpr:  FilterExpr.    (27)
	CompoundFilterExpr:  FilterExpr.    (30)
	FilterExpr:  FilterExpr.Predicate 

	DBLSLASH  reduce 30 (src line 191)
	'/'  reduce 30 (src line 191)
	'['  shift 64
	.  reduce 27 (src line 176)

	Predicate  goto 62
	PredicateStart  goto 63

state 15
	PathExpr:  CompoundFilterExpr.'/' RelativeLocationPath 
	PathExpr:  CompoundFilterExpr.DoubleSlash RelativeLocationPath 

	DBLSLASH  shift 45
	'/'  shift 65
	.  error

	DoubleSlash  goto 66

state 16
	LocationPath:  RelativeLocationPath.    (43)
	RelativeLocationPath:  RelativeLocationPath.'/' Step 
	AbbreviatedRelativeLocationPath:  RelativeLocationPath.DoubleSlash Step 

	DBLSLASH  shift 45
	'/'  shift 67
	.  reduce 43 (src line 238)

	DoubleSlash  goto 68

state 17
	LocationPath:  AbsoluteLocationPath.    (44)

	.  reduce 44 (src line 240)


state 18
	LocationPath:  CurrentRelativeLocationPath.    (45)

	.  reduce 45 (src line 241)


state 19
	LocationPath:  DerefRelativeLocationPath.    (46)

	.  reduce 46 (src line 242)


state 20
	FilterExpr:  PrimaryExpr.    (31)

	.  reduce 31 (src line 198)


state 21
	RelativeLocationPath:  Step.    (57)

	.  reduce 57 (src line 284)


state 22
	RelativeLocationPath:  AbbreviatedRelativeLocationPath.    (59)

	.  reduce 59 (src line 287)


state 23
	AbsoluteLocationPath:  Root.    (47)
	AbsoluteLocationPath:  Root.RelativeLocationPath 

	DOTDOT  shift 44
	AXISNAME  shift 40
	NAMETEST  shift 42
	'.'  shift 43
	'@'  shift 46
	.  reduce 47 (src line 244)

	RelativeLocationPath  goto 69
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 24
	AbsoluteLocationPath:  AbbreviatedAbsoluteLocationPath.    (49)

	.  reduce 49 (src line 247)


state 25
	CurrentRelativeLocationPath:  CurrentFunc.    (50)
	CurrentRelativeLocationPath:  CurrentFunc.'/' RelativeLocationPath 

	'/'  shift 70
	.  reduce 50 (src line 249)


state 26
	DerefRelativeLocationPath:  DerefFunc.    (53)
	DerefRelativeLocationPath:  DerefFunc.'/' RelativeLocationPath 

	'/'  shift 71
	.  reduce 53 (src line 260)


state 27
	PrimaryExpr:  '('.Expr ')' 
	PrimaryExpr:  '('.')' 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	')'  shift 73
	'.'  shift 43
	'@'  shift 46
	.  error

	Expr  goto 72
	OrExpr  goto 3
	AndExpr  goto 4
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 28
	PrimaryExpr:  LITERAL.    (35)

	.  reduce 35 (src line 205)


state 29
	PrimaryExpr:  NUM.    (36)

	.  reduce 36 (src line 209)


state 30
	PrimaryExpr:  TEXTFUNC.'(' ')' 

	'('  shift 74
	.  error


state 31
	PrimaryExpr:  FUNC.'(' ')' 
	PrimaryExpr:  FUNC.'(' Expr ')' 
	PrimaryExpr:  FUNC.'(' Expr ',' Expr ')' 
	PrimaryExpr:  FUNC.'(' Expr ',' Expr ',' Expr ')' 

	'('  shift 75
	.  error


state 32
	PrimaryExpr:  NODETYPE.    (42)

	.  reduce 42 (src line 233)


state 33
	Step:  AxisSpecifier.NodeTest PredicatesStart PredicateSet PredicatesEnd 
	Step:  AxisSpecifier.NodeTest 

	NAMETEST  shift 42
	.  error

	NodeTest  goto 76

state 34
	Step:  NodeTest.PredicatesStart PredicateSet PredicatesEnd 
	Step:  NodeTest.    (63)
	PredicatesStart: .    (70)

	'['  reduce 70 (src line 319)
	.  reduce 63 (src line 300)

	PredicatesStart  goto 77

state 35
	Step:  AbbreviatedStep.    (64)

	.  reduce 64 (src line 301)


state 36
	Root:  '/'.    (56)

	.  reduce 56 (src line 278)


state 37
	AbbreviatedAbsoluteLocationPath:  DoubleSlash.RelativeLocationPath 

	DOTDOT  shift 44
	AXISNAME  shift 40
	NAMETEST  shift 42
	'.'  shift 43
	'@'  shift 46
	.  error

	RelativeLocationPath  goto 78
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 38
	CurrentFunc:  CURRENTFUNC.'(' ')' 

	'('  shift 79
	.  error


state 39
	DerefFunc:  DEREFFUNC.'(' LocationPath ')' 

	'('  shift 80
	.  error


state 40
	AxisSpecifier:  AXISNAME.DBLCOLON 

	DBLCOLON  shift 81
	.  error


state 41
	AxisSpecifier:  AbbreviatedAxisSpecifier.    (66)

	.  reduce 66 (src line 308)


state 42
	NodeTest:  NAMETEST.    (67)

	.  reduce 67 (src line 310)


state 43
	AbbreviatedStep:  '.'.    (78)

	.  reduce 78 (src line 350)


state 44
	AbbreviatedStep:  DOTDOT.    (79)

	.  reduce 79 (src line 355)


state 45
	DoubleSlash:  DBLSLASH.    (81)

	.  reduce 81 (src line 367)


state 46
	AbbreviatedAxisSpecifier:  '@'.    (80)

	.  reduce 80 (src line 360)


state 47
	OrExpr:  OrExpr OR.AndExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	AndExpr  goto 82
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 48
	AndExpr:  AndExpr AND.EqualityExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	EqualityExpr  goto 83
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 49
	EqualityExpr:  EqualityExpr EQ.RelationalExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	RelationalExpr  goto 84
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 50
	EqualityExpr:  EqualityExpr NE.RelationalExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	RelationalExpr  goto 85
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 51
	RelationalExpr:  RelationalExpr LT.AdditiveExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	AdditiveExpr  goto 86
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 52
	RelationalExpr:  RelationalExpr GT.AdditiveExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	AdditiveExpr  goto 87
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 53
	RelationalExpr:  RelationalExpr LE.AdditiveExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	AdditiveExpr  goto 88
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 54
	RelationalExpr:  RelationalExpr GE.AdditiveExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	AdditiveExpr  goto 89
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 55
	AdditiveExpr:  AdditiveExpr '+'.MultiplicativeExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	MultiplicativeExpr  goto 90
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 56
	AdditiveExpr:  AdditiveExpr '-'.MultiplicativeExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	MultiplicativeExpr  goto 91
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 57
	MultiplicativeExpr:  MultiplicativeExpr '*'.UnaryExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	UnaryExpr  goto 92
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 58
	MultiplicativeExpr:  MultiplicativeExpr DIV.UnaryExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	UnaryExpr  goto 93
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 59
	MultiplicativeExpr:  MultiplicativeExpr MOD.UnaryExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	UnaryExpr  goto 94
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 60
	UnionExpr:  UnionExpr '|'.PathExpr 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	PathExpr  goto 95
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 61
	UnaryExpr:  '-' UnaryExpr.    (23)

	.  reduce 23 (src line 156)


state 62
	FilterExpr:  FilterExpr Predicate.    (32)

	.  reduce 32 (src line 200)


state 63
	Predicate:  PredicateStart.PredicateExpr PredicateEnd 

	NUM  shift 29
	DOTDOT  shift 44
	DBLSLASH  shift 45
	FUNC  shift 31
	TEXTFUNC  shift 30
	NODETYPE  shift 32
	AXISNAME  shift 40
	LITERAL  shift 28
	NAMETEST  shift 42
	CURRENTFUNC  shift 38
	DEREFFUNC  shift 39
	'-'  shift 11
	'/'  shift 36
	'('  shift 27
	'.'  shift 43
	'@'  shift 46
	.  error

	Expr  goto 97
	OrExpr  goto 3
	AndExpr  goto 4
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 37
	PrimaryExpr  goto 20
	AbsoluteLocationPath  goto 17
	CurrentRelativeLocationPath  goto 18
	DerefRelativeLocationPath  goto 19
	Root  goto 23
	AbbreviatedAbsoluteLocationPath  goto 24
	CurrentFunc  goto 25
	DerefFunc  goto 26
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41
	PredicateExpr  goto 96

state 64
	PredicateStart:  '['.    (73)

	.  reduce 73 (src line 331)


state 65
	PathExpr:  CompoundFilterExpr '/'.RelativeLocationPath 

	DOTDOT  shift 44
	AXISNAME  shift 40
	NAMETEST  shift 42
	'.'  shift 43
	'@'  shift 46
	.  error

	RelativeLocationPath  goto 98
	Step  goto 21
	AbbreviatedRelativeLocationPath  goto 22
	AxisSpecifier  goto 33
	NodeTest  goto 34
	AbbreviatedStep  goto 35
	AbbreviatedAxisSpecifier  goto 41

state 66
	PathExpr:  CompoundFilterExpr DoubleSlash.RelativeLocationPath 
